update api for student and class instance
