# routes/AccountService.js
@@ -1,9 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { newStudent, studentGetOne, studentGetAll } = require("../controllers/AccountController");
-
-router.get("/get/:id_student", studentGetOne);
-router.get("/get-all", studentGetAll);
-router.post("/new", newStudent);
-
-module.exports = router;
